<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".activity.EntryActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/moengagelogo" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <!--  UsreName Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutLoginUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/input_loginUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userName"
                    android:inputType="textPersonName"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--  Email Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/input_loginemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailID"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layouLoginPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/input_loginpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="25"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layouLoginConfPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/input_loginconfpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:maxLength="25"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:onClick="onClickEntry"
                android:text="@string/signup"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:id="@+id/txt_toLogin"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/toLogin"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:visibility="invisible" />
</RelativeLayout>
